Add callback URLs to vcr_helper and re-record cassettes for Curry subscriber

--- a/spec/vcr_cassettes/curry_repository_subscriber.yml
+++ b/spec/vcr_cassettes/curry_repository_subscriber.yml
@@ -1,128 +1,6 @@
 ---
 http_interactions:
 - request:
-    method: post
-    uri: https://api.github.com/hub
-    body:
-      encoding: UTF-8
-      string: hub.callback=<PUBSUBHUBBUB_CALLBACK_OVERRIDDEN>&hub.mode=subscribe&hub.secret=<PUBSUBHUBBUB_SECRET>&hub.topic=https%3A%2F%2Fgithub.com%2Fchef%2Fpaprika%2Fevents%2Fpull_request
-    headers:
-      User-Agent:
-      - Octokit Ruby Gem 3.8.0
-      Authorization:
-      - token <TOKEN>
-      Content-Type:
-      - application/x-www-form-urlencoded
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-  response:
-    status:
-      code: 204
-      message: No Content
-    headers:
-      Server:
-      - GitHub.com
-      Date:
-      - Tue, 01 Dec 2015 22:25:18 GMT
-      Status:
-      - 204 No Content
-      X-Ratelimit-Limit:
-      - '5000'
-      X-Ratelimit-Remaining:
-      - '4995'
-      X-Ratelimit-Reset:
-      - '1449012274'
-      X-Oauth-Scopes:
-      - gist, repo, user
-      X-Accepted-Oauth-Scopes:
-      - admin:repo_hook, write:repo_hook
-      X-Github-Media-Type:
-      - github.v3
-      X-Xss-Protection:
-      - 1; mode=block
-      X-Frame-Options:
-      - deny
-      Content-Security-Policy:
-      - default-src 'none'
-      Strict-Transport-Security:
-      - max-age=31536000; includeSubdomains; preload
-      X-Content-Type-Options:
-      - nosniff
-      Vary:
-      - Accept-Encoding
-      X-Served-By:
-      - 7f48e2f7761567e923121f17538d7a6d
-      X-Github-Request-Id:
-      - 64248A0E:14938:5A7383F:565E1E4E
-    body:
-      encoding: UTF-8
-      string: ''
-    http_version: 
-  recorded_at: Tue, 01 Dec 2015 22:25:18 GMT
-- request:
-    method: post
-    uri: https://api.github.com/hub
-    body:
-      encoding: UTF-8
-      string: hub.callback=<PUBSUBHUBBUB_CALLBACK_COMPUTED>&hub.mode=subscribe&hub.secret=<PUBSUBHUBBUB_SECRET>&hub.topic=https%3A%2F%2Fgithub.com%2Fchef%2Fnot_paprika%2Fevents%2Fpull_request
-    headers:
-      User-Agent:
-      - Octokit Ruby Gem 3.8.0
-      Authorization:
-      - token <TOKEN>
-      Content-Type:
-      - application/x-www-form-urlencoded
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-  response:
-    status:
-      code: 422
-      message: Unprocessable Entity
-    headers:
-      Server:
-      - GitHub.com
-      Date:
-      - Tue, 01 Dec 2015 22:25:19 GMT
-      Content-Type:
-      - application/json; charset=utf-8
-      Content-Length:
-      - '188'
-      Status:
-      - 422 Unprocessable Entity
-      X-Ratelimit-Limit:
-      - '5000'
-      X-Ratelimit-Remaining:
-      - '4989'
-      X-Ratelimit-Reset:
-      - '1449012274'
-      X-Oauth-Scopes:
-      - gist, repo, user
-      X-Accepted-Oauth-Scopes:
-      - repo
-      X-Github-Media-Type:
-      - github.v3
-      X-Xss-Protection:
-      - 1; mode=block
-      X-Frame-Options:
-      - deny
-      Content-Security-Policy:
-      - default-src 'none'
-      Strict-Transport-Security:
-      - max-age=31536000; includeSubdomains; preload
-      X-Content-Type-Options:
-      - nosniff
-      X-Github-Request-Id:
-      - 64248A0E:14934:1C536B8:565E1E4F
-    body:
-      encoding: UTF-8
-      string: '{"message":"No repository found for hub.topic: \"https://github.com/chef/not_paprika/events/pull_request\"","documentation_url":"https://developer.github.com/v3/repos/hooks/#pubsubhubbub"}'
-    http_version: 
-  recorded_at: Tue, 01 Dec 2015 22:25:19 GMT
-- request:
     method: get
     uri: https://api.github.com/repos/chef/paprika/hooks
     body:
@@ -147,7 +25,7 @@ http_interactions:
       Server:
       - GitHub.com
       Date:
-      - Wed, 02 Dec 2015 01:00:02 GMT
+      - Wed, 02 Dec 2015 01:48:12 GMT
       Content-Type:
       - application/json; charset=utf-8
       Transfer-Encoding:
@@ -157,13 +35,13 @@ http_interactions:
       X-Ratelimit-Limit:
       - '5000'
       X-Ratelimit-Remaining:
-      - '4988'
+      - '4873'
       X-Ratelimit-Reset:
       - '1449020937'
       Cache-Control:
       - private, max-age=60, s-maxage=60
       Etag:
-      - W/"c25896261d8c3fe7bd6c762067aad932"
+      - W/"5d0d3ee2abd8b5b54c1ea7f6a64578fa"
       X-Oauth-Scopes:
       - gist, repo, user
       X-Accepted-Oauth-Scopes:
@@ -191,15 +69,18 @@ http_interactions:
       X-Content-Type-Options:
       - nosniff
       X-Served-By:
-      - 5aeb3f30c9e3ef6ef7bcbcddfd9a68f7
+      - 474556b853193c38f1b14328ce2d1b7d
       X-Github-Request-Id:
-      - 64248A0E:47C0:223C7B:565E4292
+      - 64248A0E:12D3D:225805:565E4DDC
     body:
       encoding: UTF-8
-      string: '[{"url":"https://api.github.com/repos/chef/paprika/hooks/2446779","test_url":"https://api.github.com/repos/chef/paprika/hooks/2446779/test","ping_url":"https://api.github.com/repos/chef/paprika/hooks/2446779/pings","id":2446779,"name":"web","active":true,"events":["pull_request"],"config":{"url":"http://currybowl.herokuapp.com/52f2934cec5edd0002000015","secret":"********","content_type":"form"},"last_response":{"code":200,"status":"active","message":"OK"},"updated_at":"2015-09-23T01:25:48Z","created_at":"2014-06-19T16:01:15Z"},{"url":"https://api.github.com/repos/chef/paprika/hooks/5453951","test_url":"https://api.github.com/repos/chef/paprika/hooks/5453951/test","ping_url":"https://api.github.com/repos/chef/paprika/hooks/5453951/pings","id":5453951,"name":"web","active":true,"events":["push"],"config":{"url":"https://chefio.atlassian.net/rest/bitbucket/1.0/repository/1118/sync"},"last_response":{"code":200,"status":"active","message":"OK"},"updated_at":"2015-07-29T20:55:22Z","created_at":"2015-07-29T20:55:22Z"},{"url":"https://api.github.com/repos/chef/paprika/hooks/5453952","test_url":"https://api.github.com/repos/chef/paprika/hooks/5453952/test","ping_url":"https://api.github.com/repos/chef/paprika/hooks/5453952/pings","id":5453952,"name":"web","active":true,"events":["push","pull_request","pull_request_review_comment","issue_comment"],"config":{"content_type":"json","url":"https://chefio.atlassian.net/rest/bitbucket/1.0/repository/1118/sync"},"last_response":{"code":200,"status":"active","message":"OK"},"updated_at":"2015-09-23T01:25:49Z","created_at":"2015-07-29T20:55:22Z"},{"url":"https://api.github.com/repos/chef/paprika/hooks/6559471","test_url":"https://api.github.com/repos/chef/paprika/hooks/6559471/test","ping_url":"https://api.github.com/repos/chef/paprika/hooks/6559471/pings","id":6559471,"name":"web","active":true,"events":["pull_request"],"config":{"url":"http://localhost:3000/curry/pull_request_updates","secret":"********","content_type":"form"},"last_response":{"code":504,"status":"timeout","message":"Service
-        Timeout"},"updated_at":"2015-12-02T00:59:41Z","created_at":"2015-12-02T00:59:41Z"}]'
+      string: '[{"url":"https://api.github.com/repos/chef/paprika/hooks/2446779","test_url":"https://api.github.com/repos/chef/paprika/hooks/2446779/test","ping_url":"https://api.github.com/repos/chef/paprika/hooks/2446779/pings","id":2446779,"name":"web","active":true,"events":["pull_request"],"config":{"url":"http://currybowl.herokuapp.com/52f2934cec5edd0002000015","secret":"********","content_type":"form"},"last_response":{"code":200,"status":"active","message":"OK"},"updated_at":"2015-09-23T01:25:48Z","created_at":"2014-06-19T16:01:15Z"},{"url":"https://api.github.com/repos/chef/paprika/hooks/5453951","test_url":"https://api.github.com/repos/chef/paprika/hooks/5453951/test","ping_url":"https://api.github.com/repos/chef/paprika/hooks/5453951/pings","id":5453951,"name":"web","active":true,"events":["push"],"config":{"url":"https://chefio.atlassian.net/rest/bitbucket/1.0/repository/1118/sync"},"last_response":{"code":200,"status":"active","message":"OK"},"updated_at":"2015-07-29T20:55:22Z","created_at":"2015-07-29T20:55:22Z"},{"url":"https://api.github.com/repos/chef/paprika/hooks/5453952","test_url":"https://api.github.com/repos/chef/paprika/hooks/5453952/test","ping_url":"https://api.github.com/repos/chef/paprika/hooks/5453952/pings","id":5453952,"name":"web","active":true,"events":["push","pull_request","pull_request_review_comment","issue_comment"],"config":{"content_type":"json","url":"https://chefio.atlassian.net/rest/bitbucket/1.0/repository/1118/sync"},"last_response":{"code":200,"status":"active","message":"OK"},"updated_at":"2015-09-23T01:25:49Z","created_at":"2015-07-29T20:55:22Z"},{"url":"https://api.github.com/repos/chef/paprika/hooks/6559607","test_url":"https://api.github.com/repos/chef/paprika/hooks/6559607/test","ping_url":"https://api.github.com/repos/chef/paprika/hooks/6559607/pings","id":6559607,"name":"web","active":true,"events":["pull_request"],"config":{"url":"http://example.com/remove-me","secret":"********","content_type":"form"},"last_response":{"code":422,"status":"misconfigured","message":"Invalid
+        HTTP Response: 404"},"updated_at":"2015-12-02T01:18:54Z","created_at":"2015-12-02T01:18:54Z"},{"url":"https://api.github.com/repos/chef/paprika/hooks/6559757","test_url":"https://api.github.com/repos/chef/paprika/hooks/6559757/test","ping_url":"https://api.github.com/repos/chef/paprika/hooks/6559757/pings","id":6559757,"name":"web","active":true,"events":["pull_request"],"config":{"url":"https://example.com/current_callback_url","secret":"********","content_type":"form"},"last_response":{"code":422,"status":"misconfigured","message":"Invalid
+        HTTP Response: 404"},"updated_at":"2015-12-02T01:45:36Z","created_at":"2015-12-02T01:45:36Z"},{"url":"https://api.github.com/repos/chef/paprika/hooks/6559765","test_url":"https://api.github.com/repos/chef/paprika/hooks/6559765/test","ping_url":"https://api.github.com/repos/chef/paprika/hooks/6559765/pings","id":6559765,"name":"web","active":true,"events":["pull_request"],"config":{"url":"https://example.com/overridden_callback_url","secret":"********","content_type":"form"},"last_response":{"code":422,"status":"misconfigured","message":"Invalid
+        HTTP Response: 404"},"updated_at":"2015-12-02T01:45:56Z","created_at":"2015-12-02T01:45:56Z"},{"url":"https://api.github.com/repos/chef/paprika/hooks/6559766","test_url":"https://api.github.com/repos/chef/paprika/hooks/6559766/test","ping_url":"https://api.github.com/repos/chef/paprika/hooks/6559766/pings","id":6559766,"name":"web","active":true,"events":["pull_request"],"config":{"url":"http://localhost:3000/curry/pull_request_updates","secret":"********","content_type":"form"},"last_response":{"code":504,"status":"timeout","message":"Service
+        Timeout"},"updated_at":"2015-12-02T01:45:57Z","created_at":"2015-12-02T01:45:57Z"}]'
     http_version: 
-  recorded_at: Wed, 02 Dec 2015 01:00:02 GMT
+  recorded_at: Wed, 02 Dec 2015 01:48:12 GMT
 - request:
     method: post
     uri: https://api.github.com/hub
@@ -225,13 +106,13 @@ http_interactions:
       Server:
       - GitHub.com
       Date:
-      - Wed, 02 Dec 2015 01:00:58 GMT
+      - Wed, 02 Dec 2015 01:48:12 GMT
       Status:
       - 204 No Content
       X-Ratelimit-Limit:
       - '5000'
       X-Ratelimit-Remaining:
-      - '4987'
+      - '4870'
       X-Ratelimit-Reset:
       - '1449020937'
       X-Oauth-Scopes:
@@ -253,12 +134,134 @@ http_interactions:
       Vary:
       - Accept-Encoding
       X-Served-By:
-      - cee4c0729c8e9147e7abcb45b9d69689
+      - 8dd185e423974a7e13abbbe6e060031e
       X-Github-Request-Id:
-      - 64248A0E:D44F:232413:565E42CA
+      - 64248A0E:12D3A:D9478:565E4DDC
     body:
       encoding: UTF-8
       string: ''
     http_version: 
-  recorded_at: Wed, 02 Dec 2015 01:00:58 GMT
+  recorded_at: Wed, 02 Dec 2015 01:48:12 GMT
+- request:
+    method: post
+    uri: https://api.github.com/hub
+    body:
+      encoding: UTF-8
+      string: hub.callback=<PUBSUBHUBBUB_CALLBACK_COMPUTED>&hub.mode=subscribe&hub.secret=<PUBSUBHUBBUB_SECRET>&hub.topic=https%3A%2F%2Fgithub.com%2Fchef%2Fnot_paprika%2Fevents%2Fpull_request
+    headers:
+      User-Agent:
+      - Octokit Ruby Gem 3.8.0
+      Authorization:
+      - token <TOKEN>
+      Content-Type:
+      - application/x-www-form-urlencoded
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+  response:
+    status:
+      code: 422
+      message: Unprocessable Entity
+    headers:
+      Server:
+      - GitHub.com
+      Date:
+      - Wed, 02 Dec 2015 01:48:13 GMT
+      Content-Type:
+      - application/json; charset=utf-8
+      Content-Length:
+      - '188'
+      Status:
+      - 422 Unprocessable Entity
+      X-Ratelimit-Limit:
+      - '5000'
+      X-Ratelimit-Remaining:
+      - '4867'
+      X-Ratelimit-Reset:
+      - '1449020937'
+      X-Oauth-Scopes:
+      - gist, repo, user
+      X-Accepted-Oauth-Scopes:
+      - repo
+      X-Github-Media-Type:
+      - github.v3
+      X-Xss-Protection:
+      - 1; mode=block
+      X-Frame-Options:
+      - deny
+      Content-Security-Policy:
+      - default-src 'none'
+      Strict-Transport-Security:
+      - max-age=31536000; includeSubdomains; preload
+      X-Content-Type-Options:
+      - nosniff
+      X-Github-Request-Id:
+      - 64248A0E:12D3F:361668:565E4DDD
+    body:
+      encoding: UTF-8
+      string: '{"message":"No repository found for hub.topic: \"https://github.com/chef/not_paprika/events/pull_request\"","documentation_url":"https://developer.github.com/v3/repos/hooks/#pubsubhubbub"}'
+    http_version: 
+  recorded_at: Wed, 02 Dec 2015 01:48:13 GMT
+- request:
+    method: post
+    uri: https://api.github.com/hub
+    body:
+      encoding: UTF-8
+      string: hub.callback=<PUBSUBHUBBUB_CALLBACK_OVERRIDDEN>&hub.mode=subscribe&hub.secret=<PUBSUBHUBBUB_SECRET>&hub.topic=https%3A%2F%2Fgithub.com%2Fchef%2Fpaprika%2Fevents%2Fpull_request
+    headers:
+      User-Agent:
+      - Octokit Ruby Gem 3.8.0
+      Authorization:
+      - token <TOKEN>
+      Content-Type:
+      - application/x-www-form-urlencoded
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+  response:
+    status:
+      code: 204
+      message: No Content
+    headers:
+      Server:
+      - GitHub.com
+      Date:
+      - Wed, 02 Dec 2015 01:48:13 GMT
+      Status:
+      - 204 No Content
+      X-Ratelimit-Limit:
+      - '5000'
+      X-Ratelimit-Remaining:
+      - '4866'
+      X-Ratelimit-Reset:
+      - '1449020937'
+      X-Oauth-Scopes:
+      - gist, repo, user
+      X-Accepted-Oauth-Scopes:
+      - admin:repo_hook, write:repo_hook
+      X-Github-Media-Type:
+      - github.v3
+      X-Xss-Protection:
+      - 1; mode=block
+      X-Frame-Options:
+      - deny
+      Content-Security-Policy:
+      - default-src 'none'
+      Strict-Transport-Security:
+      - max-age=31536000; includeSubdomains; preload
+      X-Content-Type-Options:
+      - nosniff
+      Vary:
+      - Accept-Encoding
+      X-Served-By:
+      - 5aeb3f30c9e3ef6ef7bcbcddfd9a68f7
+      X-Github-Request-Id:
+      - 64248A0E:12D3F:361696:565E4DDD
+    body:
+      encoding: UTF-8
+      string: ''
+    http_version: 
+  recorded_at: Wed, 02 Dec 2015 01:48:13 GMT
 recorded_with: VCR 2.9.2
