--- a/spec/vcr_cassettes/curry_repository_resubscriber.yml
+++ b/spec/vcr_cassettes/curry_repository_resubscriber.yml
@@ -184,189 +184,6 @@ http_interactions:
     http_version: 
   recorded_at: Wed, 02 Dec 2015 01:46:41 GMT
 - request:
-    method: post
-    uri: https://api.github.com/hub
-    body:
-      encoding: UTF-8
-      string: hub.callback=<PUBSUBHUBHUB_CALLBACK_PREVIOUS>&hub.mode=subscribe&hub.secret=<PUBSUBHUBBUB_SECRET>&hub.topic=https%3A%2F%2Fgithub.com%2Fchef%2Fpaprika%2Fevents%2Fpull_request
-    headers:
-      User-Agent:
-      - Octokit Ruby Gem 3.8.0
-      Authorization:
-      - token <TOKEN>
-      Content-Type:
-      - application/x-www-form-urlencoded
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-  response:
-    status:
-      code: 204
-      message: No Content
-    headers:
-      Server:
-      - GitHub.com
-      Date:
-      - Wed, 02 Dec 2015 01:48:16 GMT
-      Status:
-      - 204 No Content
-      X-Ratelimit-Limit:
-      - '5000'
-      X-Ratelimit-Remaining:
-      - '4844'
-      X-Ratelimit-Reset:
-      - '1449020937'
-      X-Oauth-Scopes:
-      - gist, repo, user
-      X-Accepted-Oauth-Scopes:
-      - admin:repo_hook, write:repo_hook
-      X-Github-Media-Type:
-      - github.v3
-      X-Xss-Protection:
-      - 1; mode=block
-      X-Frame-Options:
-      - deny
-      Content-Security-Policy:
-      - default-src 'none'
-      Strict-Transport-Security:
-      - max-age=31536000; includeSubdomains; preload
-      X-Content-Type-Options:
-      - nosniff
-      Vary:
-      - Accept-Encoding
-      X-Served-By:
-      - 4c8b2d4732c413f4b9aefe394bd65569
-      X-Github-Request-Id:
-      - 64248A0E:12D3F:361A84:565E4DE0
-    body:
-      encoding: UTF-8
-      string: ''
-    http_version: 
-  recorded_at: Wed, 02 Dec 2015 01:48:16 GMT
-- request:
-    method: post
-    uri: https://api.github.com/hub
-    body:
-      encoding: UTF-8
-      string: hub.callback=<PUBSUBHUBHUB_CALLBACK_PREVIOUS>&hub.mode=unsubscribe&hub.topic=https%3A%2F%2Fgithub.com%2Fchef%2Fpaprika%2Fevents%2Fpull_request
-    headers:
-      User-Agent:
-      - Octokit Ruby Gem 3.8.0
-      Authorization:
-      - token <TOKEN>
-      Content-Type:
-      - application/x-www-form-urlencoded
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-  response:
-    status:
-      code: 204
-      message: No Content
-    headers:
-      Server:
-      - GitHub.com
-      Date:
-      - Wed, 02 Dec 2015 01:48:16 GMT
-      Status:
-      - 204 No Content
-      X-Ratelimit-Limit:
-      - '5000'
-      X-Ratelimit-Remaining:
-      - '4843'
-      X-Ratelimit-Reset:
-      - '1449020937'
-      X-Oauth-Scopes:
-      - gist, repo, user
-      X-Accepted-Oauth-Scopes:
-      - admin:repo_hook, write:repo_hook
-      X-Github-Media-Type:
-      - github.v3
-      X-Xss-Protection:
-      - 1; mode=block
-      X-Frame-Options:
-      - deny
-      Content-Security-Policy:
-      - default-src 'none'
-      Strict-Transport-Security:
-      - max-age=31536000; includeSubdomains; preload
-      X-Content-Type-Options:
-      - nosniff
-      Vary:
-      - Accept-Encoding
-      X-Served-By:
-      - e724c57ebb9961c772a91e2dd7421c8d
-      X-Github-Request-Id:
-      - 64248A0E:12D40:339DAE:565E4DE0
-    body:
-      encoding: UTF-8
-      string: ''
-    http_version: 
-  recorded_at: Wed, 02 Dec 2015 01:48:16 GMT
-- request:
-    method: post
-    uri: https://api.github.com/hub
-    body:
-      encoding: UTF-8
-      string: hub.callback=<PUBSUBHUBHUB_CALLBACK_CURRENT>&hub.mode=subscribe&hub.secret=<PUBSUBHUBBUB_SECRET>&hub.topic=https%3A%2F%2Fgithub.com%2Fchef%2Fpaprika%2Fevents%2Fpull_request
-    headers:
-      User-Agent:
-      - Octokit Ruby Gem 3.8.0
-      Authorization:
-      - token <TOKEN>
-      Content-Type:
-      - application/x-www-form-urlencoded
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-  response:
-    status:
-      code: 204
-      message: No Content
-    headers:
-      Server:
-      - GitHub.com
-      Date:
-      - Wed, 02 Dec 2015 01:48:16 GMT
-      Status:
-      - 204 No Content
-      X-Ratelimit-Limit:
-      - '5000'
-      X-Ratelimit-Remaining:
-      - '4842'
-      X-Ratelimit-Reset:
-      - '1449020937'
-      X-Oauth-Scopes:
-      - gist, repo, user
-      X-Accepted-Oauth-Scopes:
-      - admin:repo_hook, write:repo_hook
-      X-Github-Media-Type:
-      - github.v3
-      X-Xss-Protection:
-      - 1; mode=block
-      X-Frame-Options:
-      - deny
-      Content-Security-Policy:
-      - default-src 'none'
-      Strict-Transport-Security:
-      - max-age=31536000; includeSubdomains; preload
-      X-Content-Type-Options:
-      - nosniff
-      Vary:
-      - Accept-Encoding
-      X-Served-By:
-      - e724c57ebb9961c772a91e2dd7421c8d
-      X-Github-Request-Id:
-      - 64248A0E:12D40:339DD4:565E4DE0
-    body:
-      encoding: UTF-8
-      string: ''
-    http_version: 
-  recorded_at: Wed, 02 Dec 2015 01:48:16 GMT
-- request:
     method: get
     uri: https://api.github.com/repos/chef/paprika/hooks
     body:
@@ -391,7 +208,7 @@ http_interactions:
       Server:
       - GitHub.com
       Date:
-      - Wed, 02 Dec 2015 01:48:16 GMT
+      - Wed, 02 Dec 2015 02:18:51 GMT
       Content-Type:
       - application/json; charset=utf-8
       Transfer-Encoding:
@@ -401,13 +218,13 @@ http_interactions:
       X-Ratelimit-Limit:
       - '5000'
       X-Ratelimit-Remaining:
-      - '4841'
+      - '4980'
       X-Ratelimit-Reset:
-      - '1449020937'
+      - '1449026328'
       Cache-Control:
       - private, max-age=60, s-maxage=60
       Etag:
-      - W/"ecc7d7a92784e039b58c1f203c21af26"
+      - W/"97e9cc9d7195631da498e121cf5f0125"
       X-Oauth-Scopes:
       - gist, repo, user
       X-Accepted-Oauth-Scopes:
@@ -435,15 +252,199 @@ http_interactions:
       X-Content-Type-Options:
       - nosniff
       X-Served-By:
-      - 7f48e2f7761567e923121f17538d7a6d
+      - 01d096e6cfe28f8aea352e988c332cd3
       X-Github-Request-Id:
-      - 64248A0E:12D3F:361AFC:565E4DE0
+      - 64248A0E:12D3F:3E23AE:565E550B
     body:
       encoding: UTF-8
       string: '[{"url":"https://api.github.com/repos/chef/paprika/hooks/2446779","test_url":"https://api.github.com/repos/chef/paprika/hooks/2446779/test","ping_url":"https://api.github.com/repos/chef/paprika/hooks/2446779/pings","id":2446779,"name":"web","active":true,"events":["pull_request"],"config":{"url":"http://currybowl.herokuapp.com/52f2934cec5edd0002000015","secret":"********","content_type":"form"},"last_response":{"code":200,"status":"active","message":"OK"},"updated_at":"2015-09-23T01:25:48Z","created_at":"2014-06-19T16:01:15Z"},{"url":"https://api.github.com/repos/chef/paprika/hooks/5453951","test_url":"https://api.github.com/repos/chef/paprika/hooks/5453951/test","ping_url":"https://api.github.com/repos/chef/paprika/hooks/5453951/pings","id":5453951,"name":"web","active":true,"events":["push"],"config":{"url":"https://chefio.atlassian.net/rest/bitbucket/1.0/repository/1118/sync"},"last_response":{"code":200,"status":"active","message":"OK"},"updated_at":"2015-07-29T20:55:22Z","created_at":"2015-07-29T20:55:22Z"},{"url":"https://api.github.com/repos/chef/paprika/hooks/5453952","test_url":"https://api.github.com/repos/chef/paprika/hooks/5453952/test","ping_url":"https://api.github.com/repos/chef/paprika/hooks/5453952/pings","id":5453952,"name":"web","active":true,"events":["push","pull_request","pull_request_review_comment","issue_comment"],"config":{"content_type":"json","url":"https://chefio.atlassian.net/rest/bitbucket/1.0/repository/1118/sync"},"last_response":{"code":200,"status":"active","message":"OK"},"updated_at":"2015-09-23T01:25:49Z","created_at":"2015-07-29T20:55:22Z"},{"url":"https://api.github.com/repos/chef/paprika/hooks/6559607","test_url":"https://api.github.com/repos/chef/paprika/hooks/6559607/test","ping_url":"https://api.github.com/repos/chef/paprika/hooks/6559607/pings","id":6559607,"name":"web","active":true,"events":["pull_request"],"config":{"url":"http://example.com/remove-me","secret":"********","content_type":"form"},"last_response":{"code":422,"status":"misconfigured","message":"Invalid
         HTTP Response: 404"},"updated_at":"2015-12-02T01:18:54Z","created_at":"2015-12-02T01:18:54Z"},{"url":"https://api.github.com/repos/chef/paprika/hooks/6559757","test_url":"https://api.github.com/repos/chef/paprika/hooks/6559757/test","ping_url":"https://api.github.com/repos/chef/paprika/hooks/6559757/pings","id":6559757,"name":"web","active":true,"events":["pull_request"],"config":{"url":"https://example.com/current_callback_url","secret":"********","content_type":"form"},"last_response":{"code":422,"status":"misconfigured","message":"Invalid
         HTTP Response: 404"},"updated_at":"2015-12-02T01:45:36Z","created_at":"2015-12-02T01:45:36Z"},{"url":"https://api.github.com/repos/chef/paprika/hooks/6559765","test_url":"https://api.github.com/repos/chef/paprika/hooks/6559765/test","ping_url":"https://api.github.com/repos/chef/paprika/hooks/6559765/pings","id":6559765,"name":"web","active":true,"events":["pull_request"],"config":{"url":"https://example.com/overridden_callback_url","secret":"********","content_type":"form"},"last_response":{"code":422,"status":"misconfigured","message":"Invalid
-        HTTP Response: 404"},"updated_at":"2015-12-02T01:45:56Z","created_at":"2015-12-02T01:45:56Z"}]'
+        HTTP Response: 404"},"updated_at":"2015-12-02T01:45:56Z","created_at":"2015-12-02T01:45:56Z"},{"url":"https://api.github.com/repos/chef/paprika/hooks/6560060","test_url":"https://api.github.com/repos/chef/paprika/hooks/6560060/test","ping_url":"https://api.github.com/repos/chef/paprika/hooks/6560060/pings","id":6560060,"name":"web","active":true,"events":["pull_request"],"config":{"url":"http://localhost:3000/curry/pull_request_updates","secret":"********","content_type":"form"},"last_response":{"code":504,"status":"timeout","message":"Service
+        Timeout"},"updated_at":"2015-12-02T02:18:48Z","created_at":"2015-12-02T02:18:48Z"}]'
     http_version: 
-  recorded_at: Wed, 02 Dec 2015 01:48:16 GMT
+  recorded_at: Wed, 02 Dec 2015 02:18:51 GMT
+- request:
+    method: post
+    uri: https://api.github.com/hub
+    body:
+      encoding: UTF-8
+      string: hub.callback=<PUBSUBHUBHUB_CALLBACK_PREVIOUS>&hub.mode=subscribe&hub.secret=<PUBSUBHUBBUB_SECRET>&hub.topic=https%3A%2F%2Fgithub.com%2Fchef%2Fpaprika%2Fevents%2Fpull_request
+    headers:
+      User-Agent:
+      - Octokit Ruby Gem 3.8.0
+      Authorization:
+      - token <TOKEN>
+      Content-Type:
+      - application/x-www-form-urlencoded
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+  response:
+    status:
+      code: 204
+      message: No Content
+    headers:
+      Server:
+      - GitHub.com
+      Date:
+      - Wed, 02 Dec 2015 02:18:51 GMT
+      Status:
+      - 204 No Content
+      X-Ratelimit-Limit:
+      - '5000'
+      X-Ratelimit-Remaining:
+      - '4979'
+      X-Ratelimit-Reset:
+      - '1449026328'
+      X-Oauth-Scopes:
+      - gist, repo, user
+      X-Accepted-Oauth-Scopes:
+      - admin:repo_hook, write:repo_hook
+      X-Github-Media-Type:
+      - github.v3
+      X-Xss-Protection:
+      - 1; mode=block
+      X-Frame-Options:
+      - deny
+      Content-Security-Policy:
+      - default-src 'none'
+      Strict-Transport-Security:
+      - max-age=31536000; includeSubdomains; preload
+      X-Content-Type-Options:
+      - nosniff
+      Vary:
+      - Accept-Encoding
+      X-Served-By:
+      - 7f48e2f7761567e923121f17538d7a6d
+      X-Github-Request-Id:
+      - 64248A0E:12D3F:3E23DC:565E550B
+    body:
+      encoding: UTF-8
+      string: ''
+    http_version: 
+  recorded_at: Wed, 02 Dec 2015 02:18:51 GMT
+- request:
+    method: post
+    uri: https://api.github.com/hub
+    body:
+      encoding: UTF-8
+      string: hub.callback=<PUBSUBHUBHUB_CALLBACK_PREVIOUS>&hub.mode=unsubscribe&hub.topic=https%3A%2F%2Fgithub.com%2Fchef%2Fpaprika%2Fevents%2Fpull_request
+    headers:
+      User-Agent:
+      - Octokit Ruby Gem 3.8.0
+      Authorization:
+      - token <TOKEN>
+      Content-Type:
+      - application/x-www-form-urlencoded
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+  response:
+    status:
+      code: 204
+      message: No Content
+    headers:
+      Server:
+      - GitHub.com
+      Date:
+      - Wed, 02 Dec 2015 02:18:51 GMT
+      Status:
+      - 204 No Content
+      X-Ratelimit-Limit:
+      - '5000'
+      X-Ratelimit-Remaining:
+      - '4978'
+      X-Ratelimit-Reset:
+      - '1449026328'
+      X-Oauth-Scopes:
+      - gist, repo, user
+      X-Accepted-Oauth-Scopes:
+      - admin:repo_hook, write:repo_hook
+      X-Github-Media-Type:
+      - github.v3
+      X-Xss-Protection:
+      - 1; mode=block
+      X-Frame-Options:
+      - deny
+      Content-Security-Policy:
+      - default-src 'none'
+      Strict-Transport-Security:
+      - max-age=31536000; includeSubdomains; preload
+      X-Content-Type-Options:
+      - nosniff
+      Vary:
+      - Accept-Encoding
+      X-Served-By:
+      - 065b43cd9674091fec48a221b420fbb3
+      X-Github-Request-Id:
+      - 64248A0E:12D3A:F73F8:565E550B
+    body:
+      encoding: UTF-8
+      string: ''
+    http_version: 
+  recorded_at: Wed, 02 Dec 2015 02:18:51 GMT
+- request:
+    method: post
+    uri: https://api.github.com/hub
+    body:
+      encoding: UTF-8
+      string: hub.callback=<PUBSUBHUBHUB_CALLBACK_CURRENT>&hub.mode=subscribe&hub.secret=<PUBSUBHUBBUB_SECRET>&hub.topic=https%3A%2F%2Fgithub.com%2Fchef%2Fpaprika%2Fevents%2Fpull_request
+    headers:
+      User-Agent:
+      - Octokit Ruby Gem 3.8.0
+      Authorization:
+      - token <TOKEN>
+      Content-Type:
+      - application/x-www-form-urlencoded
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+  response:
+    status:
+      code: 204
+      message: No Content
+    headers:
+      Server:
+      - GitHub.com
+      Date:
+      - Wed, 02 Dec 2015 02:18:51 GMT
+      Status:
+      - 204 No Content
+      X-Ratelimit-Limit:
+      - '5000'
+      X-Ratelimit-Remaining:
+      - '4977'
+      X-Ratelimit-Reset:
+      - '1449026328'
+      X-Oauth-Scopes:
+      - gist, repo, user
+      X-Accepted-Oauth-Scopes:
+      - admin:repo_hook, write:repo_hook
+      X-Github-Media-Type:
+      - github.v3
+      X-Xss-Protection:
+      - 1; mode=block
+      X-Frame-Options:
+      - deny
+      Content-Security-Policy:
+      - default-src 'none'
+      Strict-Transport-Security:
+      - max-age=31536000; includeSubdomains; preload
+      X-Content-Type-Options:
+      - nosniff
+      Vary:
+      - Accept-Encoding
+      X-Served-By:
+      - a241e1a8264a6ace03db946c85b92db3
+      X-Github-Request-Id:
+      - 64248A0E:12D38:AA21D:565E550B
+    body:
+      encoding: UTF-8
+      string: ''
+    http_version: 
+  recorded_at: Wed, 02 Dec 2015 02:18:51 GMT
 recorded_with: VCR 2.9.2
