--- a/spec/vcr_cassettes/curry_add_repo.yml
+++ b/spec/vcr_cassettes/curry_add_repo.yml
@@ -5,7 +5,7 @@ http_interactions:
     uri: https://api.github.com/hub
     body:
       encoding: UTF-8
-      string: hub.callback=http%3A%2F%2Flocalhost%3A3000%2Fcurry%2Fpull_request_updates&hub.mode=subscribe&hub.secret=<PUBSUBHUBBUB_SECRET>&hub.topic=https%3A%2F%2Fgithub.com%2Fgofullstack%2Fpaprika%2Fevents%2Fpull_request
+      string: hub.callback=<PUBSUBHUBBUB_CALLBACK_COMPUTED>&hub.mode=subscribe&hub.secret=<PUBSUBHUBBUB_SECRET>&hub.topic=https%3A%2F%2Fgithub.com%2Fgofullstack%2Fpaprika%2Fevents%2Fpull_request
     headers:
       User-Agent:
       - Octokit Ruby Gem 3.3.1
