Tell Travis to only test pushes to master, not every branch.
This should still run tests on PRs and new commits to PRs.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ before_install:
 before_script:
 - psql -c 'create database supermarket_test;' -U postgres
 - bundle exec rake db:schema:load
+branches:
+  only:
+  - master
 bundler_args: "--without development --jobs 7"
 cache:
 - apt
