--- a/.env
+++ b/.env
@@ -11,6 +11,7 @@ CCLA_VERSION=99999-2621/LEGAL14767024.1
 ICLA_VERSION=99999-2621/LEGAL14767024.1
 FROM_EMAIL=donotreply@example.com
 HOST=localhost
+POSTGRES_IP=localhost
 PORT=3000
 PROTOCOL=http
 CURRY_CLA_LOCATION=https://community.chef.io
