--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ CCLA_VERSION=99999-2621/LEGAL14767024.1
 ICLA_VERSION=99999-2621/LEGAL14767024.1
 FROM_EMAIL=donotreply@example.com
 HOST=localhost
-POSTGRES_IP=localhost
+POSTGRES_IP=db
 PORT=3000
 PROTOCOL=http
 CURRY_CLA_LOCATION=https://community.chef.io
